Avoid breaks inside `<pre>` and `<figure>`

--- a/packages/starlight/style/print.css
+++ b/packages/starlight/style/print.css
@@ -105,7 +105,9 @@
 		overflow-x: hidden !important;
 		white-space: pre-wrap !important;
 	}
-	.sl-markdown-content .expressive-code {
+	.sl-markdown-content .expressive-code,
+	.sl-markdown-content figure,
+	.sl-markdown-content pre {
 		break-inside: avoid;
 	}
 	.expressive-code .frame.is-terminal .header::before {
